# fidorender

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
app/: api.py  config.py  log_config.py  main.py  pages.py  render.py  server.py
tests/: conftest.py  test_api.py  test_pages.py  test_render.py
