[project]
name = "fidorender"
version = "0.1.0"
description = "FastAPI service that renders PDF pages to PNG or JPEG images"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "loguru>=0.7.3",
    "pypdfium2>=5.9.0",
    "pillow>=11.0.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "types-pillow>=10.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
files = ["app"]
exclude = ["tests"]

[[tool.mypy.overrides]]
module = "pypdfium2.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
